[workspace]
members = ["leader", "worker", "ops", "common"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anyhow = "1.0.71"
clap = { version = "4.4.11", features = ["derive", "env"] }
dotenvy = "0.15.7"
ethers = "2.0.7"
paladin-core = "0.4.1"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# zk-evm dependencies
plonky2 = "0.2.1"
mpt_trie = { git = "https://github.com/0xPolygonZero/zk_evm.git", branch = "develop" }
evm_arithmetization = { git = "https://github.com/0xPolygonZero/zk_evm.git", branch = "develop" }
trace_decoder = { git = "https://github.com/0xPolygonZero/zk_evm.git", branch = "develop" }
proof_gen = { git = "https://github.com/0xPolygonZero/zk_evm.git", branch = "develop" }

[profile.release]
opt-level = 3
incremental = true
lto = "fat"
codegen-units = 1
