[package]
name = "leader"
version = "0.1.0"
license = "MIT or Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
ethers = { workspace = true }
evm_arithmetization = { workspace = true }
futures = "0.3.30"
hex = "0.4.3"
itertools = "0.11.0"
mpt_trie = { workspace = true }
paladin-core = { workspace = true }
plonky2 = { workspace = true }
proof_gen = { workspace = true }
reqwest = { version = "0.12.2", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { workspace = true }
serde_json = "1.0.108"
serde_path_to_error = "0.1.14"
smt_trie = { workspace = true }
tokio = { workspace = true }
# trace_decoder = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Local dependencies
ops = { path = "../ops" }
common = { path = "../common" }
